--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,9 @@ micromath = "2.0.0"
 # standard crate data is left out
 [dev-dependencies]
 rayon = "1.5.1"
+solana-program = "1.9.18"
+serde = { version = "1.0.104", features = ["derive"] }
+serde_json = "1.0.48"
 
 [features]
 default = ['std']
